updated height of top and footer menu

--- a/menu/css/square_silver/Fmenu.css
+++ b/menu/css/square_silver/Fmenu.css
@@ -24,6 +24,7 @@ li > a.Fmenu {
   padding : 5px 5px 5px 5px;
   background-color : silver;  
   color : black;
+  height:  25px;
 }
 li.dutrigger > a.Fmenu:after {
     content: "△";
