--- a/menu/css/gradient/Tmenu.css
+++ b/menu/css/gradient/Tmenu.css
@@ -11,9 +11,14 @@ nav.Tmenu {
 }
 li.Tmenu_root > a:hover {
   background: linear-gradient(#F4FAFD, #C4CACD);
+  background: -webkit-linear-gradient(#F4FAFD, #C4CACD);
+  background: -o-linear-gradient(#F4FAFD, #C4CACD);
 }
 li.Tmenu_root > a {
   background: linear-gradient(#C4CACD, #F4FAFD);
+  background: -webkit-linear-gradient(#C4CACD, #F4FAFD);
+  background: -o-linear-gradient(#C4CACD, #F4FAFD);
+  
 }
 li > a.Tmenu {
   display: block;
